<resources>
    <string name="dataCollectionStatusText">Data collection:</string>
    <string name="questionnaireStatusText">Questionnaire:</string>
    <string name="registrationStatusText">Registration for data set:</string>
    <string name="bluetoothPermissionStatusText">Bluetooth discoverable:</string>
    <string name="impressumTitle">Impressum</string>
    <string name="impressumText">tba</string>
    <string name="impressum">impressum</string>
    <string name="startingQuestionnaire">Starting questionnaire</string>
    <string name="aboutCampaign">About campaign</string>
    <string name="statusInformationText">Data collection status</string>
    <string name="questionnaireTitle">Answers to the questionnaire</string>
    <string name="registerTitle">Register to get data set</string>
    <string name="displayQuestionnaireStatusUncompleted">uncompleted</string>
    <string name="displayQuestionnaireStatusCompleted">upload pending..</string>
    <string name="displayQuestionnaireStatusCompletedAndUploaded">uploaded</string>
    <string name="displayRegistrationStatusUncompleted">not registered</string>
    <string name="displayRegistrationStatusCompleted">upload pending..</string>
    <string name="displayRegistrationStatusCompletedAndUploaded">uploaded</string>
    <string name="displayBluetoothPermissionStatusAllowed">allowed</string>
    <string name="displayBluetoothPermissionStatusForbidden">forbidden</string>
    <string name="skip_questionnaire_title">Skip questionnaire</string>
    <string name="skip_questionnaire_text">Are you sure that you want to skip this questionnaire? You can fill it out later.</string>
    <string name="registrationIncomplete">Registration incomplete\n\nPRESS TO FILL OUT</string>
    <string name="registrationPending">Registration completed\n\nUPLOAD PENDING</string>
    <string name="registrationUploaded">Registration\n\nCOMPLETED AND UPLOADED</string>
    <string name="questionnaireIncomplete">Questionnaire incomplete\n\nPRESS TO FILL OUT</string>
    <string name="questionnairePending">Questionnaire completed\n\nUPLOAD PENDING</string>
    <string name="questionnaireUploaded">Questionnaire\n\nCOMPLETED AND UPLOADED</string>
    <string name="dataCollectionStopped">Data collection stopped\n\nPRESS TO START</string>
    <string name="dataCollectionPaused">Data collection paused\n\nPRESS TO STOP</string>
    <string name="dataCollectionRunning">Data collection running\n\nPRESS TO STOP</string>
    <string name="stop_collection_dialog_title">Really stop data collection?</string>
    <string name="stop_collection_dialog_message">The data collection runs only during conference hours and does not collect during the night.</string>
    <string name="data_collection_text">Thank you for participating in the UbiComp 2013 data collection campaign. This application aims to collect Bluetooth and Wi-Fi scans in order to analyze differences in the mobility behavior between individuals and groups of scientists. The initial questionnaire is used to analyze differences in the mobility behavior between individuals and groups of the participants. The buttons allow to control the collection service. All the collected data will be transmitted to a remote server periodically and only when the Wi-Fi connection is established. The background service runs between 8am and 6pm on conference days to ensure the privacy issues.</string>
    <string name="data_collection_intro">Please let us know a bit more about you. Filling the questionnaire is optional but it will double your chances to win the Amazon vouchers!</string>
    <string name="data_collection_tos">Terms of Service</string>
    <string name="data_collection_accept">By clicking accept, you agree...</string>
    <string name="questionnaireDescription">Please let us know a bit more about you. Filling the questionnaire is optional but it will double your chances to win the Amazon vouchers!</string>
    <string name="registrationDescription">To participate in the raffle for three Amazon vouchers of 100.- USD each and to get early access to the data, just send us your e-mail using the button below. You will be able to register after the app will have collected data for at least 40% of the conference hours. <b>IMPORTANT</b>: Your e-mail address will not be linked to your data to guarantee your anonymity!</string>
    <string name="registrationYesUploadNo">To participate in the raffle for three Amazon vouchers of 100.- USD each and to get early access to the data, just send us your e-mail using the button below. You will be able to register after the app will have collected data for at least 40% of the conference hours. <b>IMPORTANT</b>: Your e-mail address will not be linked to your data to guarantee your anonymity! Thank you for submitting your registration for receiving the data set. Your registration will be uploaded to the remote server as soon as possible.</string>
    <string name="registrationYesUploadYes">To participate in the raffle for three Amazon vouchers of 100.- USD each and to get early access to the data, just send us your e-mail using the button below. You will be able to register after the app will have collected data for at least 40% of the conference hours. <b>IMPORTANT</b>: Your e-mail address will not be linked to your data to guarantee your anonymity! Thank you for submitting your registration for receiving the data set. Your registration has been uploaded to the remote server.</string>
    <string name="registrationUnlockedText">To participate in the raffle for three Amazon vouchers of 100.- USD each and to get early access to the data, just send us your e-mail using the button below. You will be able to register after the app will have collected data for at least 40% of the conference hours. <b>IMPORTANT</b>: Your e-mail address will not be linked to your data to guarantee your anonymity!</string>
    <string name="registrationAchievementUnlocked">Congratulation! You have unlocked the registration for the data set!</string>
    <string name="progressStatusText">Your data collection progress:</string>
    <string name="currentProgressInitValue">0 %</string>
    <string name="notification_checkRegistration">Check registration for data set.</string>
    <string name="notification_allUploaded">All data uploaded. Unistall app.</string>
    <string name="name">Name</string>
    <string name="email">Email*</string>
    <string name="affiliation">Affiliation</string>
    <string name="smallprint">*Required</string>
    <string name="uid">Unique device ID</string>
    <string name="wifimac">Wi-Fi MAC</string>
    <string name="bluetoothID">Bluetooth MAC</string>
    <string name="age">Age</string>
    <string name="role">Role</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="academiaindustry">Academia / industry</string>
    <string name="academia">Academia</string>
    <string name="industry">Industry</string>
    <string name="save">Submit</string>
    <string name="update">Save</string>
    <string name="reset">Clear changes</string>
    <string name="registerForData">Register</string>
    <string name="noUIDmessage">No UID</string>
    <string name="contact">Contact UbiComp 2013 DCC team</string>
    <string name="uploadQuestionnaireInterval">3600000</string>
    <string name="uploadRegistrationInterval">3600000</string>
    <string name="ok">OK</string>
    <string name="dialogmessage">Please complete the form</string>
    <string name="thanksDialogTitle">Welcome to the UbiComp 2013 DCC!</string>
    <string name="thanksDialog">You are now collecting data for the UbiComp 2013 Data Collection Campaign (DCC). Thank you for your participation!</string>
    <string name="questionnaireIncompleteTitle">Questionnaire incomplete</string>
     <string name="dialogmessageemail">Please provide a valid email address</string>
    <string-array name="userRoles">
        <item >Student / Ph.D. student</item>
        <item >Postdoc / Senior researcher</item>
        <item >Faculty member</item>
        <item >Other</item>
    </string-array>
    <string name="app_name">UbiComp 2013 DCC</string>
    <string name="action_settings">Settings</string>
    <string name="action_cluster">See Stays</string>
    <string name="action_week">See Table</string>
    <string name="action_map">Set Places</string>
    <string name="action_diary">Set Diary</string>
    <string name="action_save">Save Data</string>
    <string name="action_delete">Delete Data</string>
    <string name="action_dash">Dashboard</string>
    <string name="action_algorithms">Algorithms</string>
    <string name="action_places">Places of Interest</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="button_notnow">Not now</string>
    <string name="button_okay">Okay</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_new">New</string>
    <string name="button_mobile">On the way</string>
    <string name="button_accept">Accept</string>
    <string name="button_save">Save</string>
    <string name="image_ubicomp_title">Logo of the Ubicomp-Conference</string>
    <string name="welcomeMessageTitle">Welcome to the UbiComp 2013 Data Collection Campaign (DCC)</string>
</resources>