<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ubicomplogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/image_ubicomp_title"
        android:scaleType="centerCrop"
        android:src="@drawable/zurich" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="399dp"
            android:orientation="vertical"
            android:padding="4dip" >

            <TextView
                android:id="@+id/startingQuestionnaireTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/startingQuestionnaire"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/text_collectionIntroTOS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dip"
                android:text="@string/data_collection_intro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:gravity="fill_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/genderView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/gender"
                        android:textSize="@dimen/text_title_size" />

                    <RadioGroup
                        android:id="@+id/genderRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/genderMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/genderFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/ageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textSize="@dimen/text_title_size" />

                    <EditText
                        android:id="@+id/ageEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/roleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/role"
                android:textSize="@dimen/text_title_size" />

            <Spinner
                android:id="@+id/roleSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/academiaView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/academiaindustry"
                android:textSize="@dimen/text_title_size" />

            <RadioGroup
                android:id="@+id/academiaRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/academiaRadioAcademia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/academia" />

                <RadioButton
                    android:id="@+id/academiaRadioIndustry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/industry" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15dip"
        	android:paddingLeft="5dip"
        	android:paddingRight="5dip"
        	android:paddingTop="15dip"
        	android:textColor="@color/white"
        	android:textSize="@dimen/text_title_size"
        	android:textStyle="bold" 
        	android:layout_gravity="center"
        	android:layout_marginLeft="3dp"
        	android:layout_marginRight="3dp"
        	android:layout_marginTop="15dp"
        	android:layout_marginBottom="15dp"
        	android:background="@color/blueUbicomp"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15dip"
        	android:paddingLeft="5dip"
        	android:paddingRight="5dip"
        	android:paddingTop="15dip"
        	android:textColor="@color/white"
        	android:textSize="@dimen/text_title_size"
        	android:textStyle="bold" 
        	android:layout_gravity="center"
        	android:layout_marginLeft="3dp"
        	android:layout_marginRight="3dp"
        	android:layout_marginTop="15dp"
        	android:layout_marginBottom="15dp"
        	android:background="@color/blueUbicomp"
            android:text="@string/button_notnow" />
    </LinearLayout>

</LinearLayout>