<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" >

    <TextView
        android:id="@+id/registerTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/registerTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/registrationDescriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/registrationUnlockedText"
        android:layout_below="@id/registerTitleView" />

	

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:layout_below="@+id/registrationDescriptionView"
	    android:orientation="vertical" >
	    
	    <ProgressBar
	    	android:id="@+id/progressBarForRegistration"
	    	style="?android:attr/progressBarStyleHorizontal"
	    	android:layout_width="match_parent"
	    	android:layout_gravity="center"
	    	android:layout_height="wrap_content"
	    />

	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/progressStatusText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/progressStatusText" />
	    <TextView
	        android:id="@+id/progressStatusNumber"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:layout_gravity="right"
	        android:text="@string/currentProgressInitValue" />
	    </LinearLayout>
	</LinearLayout>
        
</RelativeLayout>