<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" >

<LinearLayout
    android:id="@+id/filloutlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
     >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dip" >

            <TextView
                android:id="@+id/registerTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/registerTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/registrationDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/registrationDescription" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/email"
                android:textSize="@dimen/text_title_size" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/name"
                android:textSize="@dimen/text_title_size" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/affiliationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/affiliation"
                android:textSize="@dimen/text_title_size" />

            <EditText
                android:id="@+id/affiliationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/smallprintView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/smallprint" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/saveUserDataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5"
            android:background="@color/blueUbicomp"
            android:paddingBottom="15dip"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="15dip"
            android:text="@string/registerForData"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

<!-- PROGRESS -->

<RelativeLayout
    android:id="@+id/progressLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
>

    <TextView
        android:id="@+id/registerTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/registerTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/registrationDescriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/registrationUnlockedText"
        android:layout_below="@id/registerTitleView" />

	<LinearLayout
	    android:id="@+id/progressBarLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/registrationDescriptionView"
	    android:layout_centerInParent="true"
	    android:layout_centerVertical="true"
	    android:layout_marginTop="30dp"
	    android:gravity="center"
	    android:orientation="vertical" >

	    <ProgressBar
	        android:id="@+id/progressBarForRegistration"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:minHeight="40dip" 
			android:maxHeight="40dip"/>

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/progressStatusText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/progressStatusText" />

	        <TextView
	            android:id="@+id/progressStatusNumber"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="right"
	            android:gravity="right"
	            android:text="@string/currentProgressInitValue" />
	    </LinearLayout>
	</LinearLayout>
        
</RelativeLayout>


</LinearLayout>